traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:4: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    if ((x!=6) && (y!=6)){return true}
                                 ^TraversalByColumn:4: warning: enclosing method test has result type Unit: return value discarded
    if ((x!=6) && (y!=6)){return true}
                          ^TraversalByColumn:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    else{return false}
                ^TraversalByColumn:5: warning: enclosing method test has result type Unit: return value discarded
    else{return false}
         ^TraversalByColumn:12: error: value unary_! is not a member of Unit
    while (!test()){
           ^